--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 h1 {
 	color:green;
 	text-align:center;
-	font-style: italic;
+	font-style: inherit;
 	text-decoration: underline;
 	border: solid;
 	border-color: orange;
