changed the font

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	background-color:gray; text-align: center;
 }
 h1 {
-	color:green;
+	color:gray;
 	text-align:center;
 	font-style: inherit;
 	text-decoration: underline;
